--- a/assets/scss/home/header/header.scss
+++ b/assets/scss/home/header/header.scss
@@ -63,7 +63,7 @@
                 p {
                     font-size: 19px;
                     line-height: 26px;
-                    font-family: 'Berthold-Akzidenz-Grotesk-Medium';
+                    font-family: 'Work Sans', sans-serif;
                 }
               }
               .dropdown-item {
