--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -75,7 +75,7 @@
 .header .nav-item .dropdown-menu p {
   font-size: 19px;
   line-height: 26px;
-  font-family: "Berthold-Akzidenz-Grotesk-Medium";
+  font-family: "Work Sans", sans-serif;
 }
 .header .nav-item .dropdown-item {
   padding-left: 0;
