--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ a, button {
 }
 
 .section__title {
-  font-size: 35px;
+  font-size: 32px;
   line-height: 45px;
 }
 @media screen and (max-width: 768px) {
@@ -480,4 +480,85 @@ ul {
   .tab-pane-content {
     padding-left: 0px;
   }
+}
+
+.topbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.topbar > .bar {
+  height: 13px;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+.topbar .color-blue {
+  background: #21578A;
+}
+.topbar .color-blue--light {
+  background: #B3C8E6;
+}
+.topbar .color-blue--dark {
+  background: #002F5F;
+}
+.topbar .color-yellow {
+  background: #E3B838;
+}
+.topbar .color-red {
+  background: #D52B21;
+}
+.topbar .color-gray {
+  background: #9EA1A8;
+}
+.topbar .color-gray--dark {
+  background: #3F3D3E;
+}
+
+.products {
+  margin-top: 97px;
+  padding-block: 155px 243px;
+}
+.products-cards {
+  padding-bottom: 160px;
+}
+.products-cards h3 {
+  margin-bottom: 0;
+}
+.products-cards img {
+  margin-bottom: 20px;
+}
+
+.list--arrow {
+  margin-bottom: 0;
+}
+.list--arrow .list__item {
+  padding-left: 0;
+}
+.list--arrow .list__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  color: #000;
+  font-size: 25px;
+  line-height: 29px;
+}
+.list--arrow .list__link::before {
+  content: "";
+  width: 15px;
+  height: 10px;
+  display: inline-block;
+  background: url(../images/chevron-right.svg) no-repeat center;
+  vertical-align: middle;
+  margin-right: 5px;
+}
+.list--arrow .list__link:hover {
+  color: #21578A;
 }/*# sourceMappingURL=style.css.map */
