--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,21 @@ a, button {
   border: 1px solid #B3C8E6 !important;
 }
 
+.btn__outline-dark {
+  border: 1px solid #002F5F;
+  color: #002F5F;
+  background: transparent;
+  border-radius: 8px;
+  padding: 4px 25px;
+  font-weight: 500 !important;
+  min-width: 188px;
+}
+.btn__outline-dark:hover, .btn__outline-dark:focus {
+  background: #21578A !important;
+  color: #fff !important;
+  border: 1px solid #21578A !important;
+}
+
 @media screen and (min-width: 1700px) {
   .container {
     max-width: 1640px;
@@ -531,6 +546,24 @@ ul {
 }
 .products-cards img {
   margin-bottom: 20px;
+}
+
+.product-detail {
+  margin-top: 97px;
+  padding-block: 155px 243px;
+}
+.product-info {
+  background: #B3C8E6;
+  padding-block: 47px;
+  text-align: center;
+}
+.product-info h3 {
+  color: #21578A;
+  line-height: 33px;
+}
+.product-info__content {
+  max-width: 594px;
+  margin: 0 auto;
 }
 
 .list--arrow {
