--- a/assets/scss/_btns.scss
+++ b/assets/scss/_btns.scss
@@ -47,4 +47,19 @@
         border:1px solid $clr-accent-light !important;
     }
 }
+.btn__outline-dark {
+    border:1px solid $clr-accent-dark;
+    color: $clr-accent-dark;
+    background: transparent;
+    border-radius: 8px;
+    padding: 4px 25px;
+    font-weight: 500 !important;
+    min-width: 188px;
+    &:hover,
+    &:focus {
+        background: $clr-accent !important;
+        color: $clr-white !important;
+        border:1px solid $clr-accent !important;
+    }
+}
 
