--- a/assets/css/feature.css
+++ b/assets/css/feature.css
@@ -1,6 +1,11 @@
 .feature {
   padding-block: 160px;
 }
+@media screen and (max-width: 768px) {
+  .feature {
+    padding-block: 80px;
+  }
+}
 .feature .nav-pills {
   max-width: 760px;
 }
@@ -25,6 +30,14 @@
     margin-bottom: 20px;
     font-size: 26px !important;
     line-height: 35px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .feature .nav-pills .nav-link {
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    font-size: 22px !important;
+    line-height: 30px;
   }
 }
 .feature .nav-pills .nav-link span {
