--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,15 +1,7 @@
 @import './variables';
 @import './mixins';
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap');
-// @font-face {
-//     font-family: 'Berthold-Akzidenz-Grotesk-Medium';
-//     src: 
-//     url('font/Berthold-Akzidenz-Grotesk-Medium.woff2'),
-//     url('font/Berthold-Akzidenz-Grotesk-Medium.otf');
-//     font-weight: 500;
-//     font-style: normal;
-//     font-display: swap;
-// }
+
 
 @font-face {
     font-family: 'Arial';
@@ -24,6 +16,9 @@ body{
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
+    @include mq(md){
+        font-size: 18px;
+    }
 }
 
 
