--- a/assets/scss/home/footer/footer.scss
+++ b/assets/scss/home/footer/footer.scss
@@ -4,6 +4,9 @@
 
 .footer {
     padding-top: 164px;
+    @include mq(lg) {
+        padding-top: 80px;
+    }
       .copyright__text {
         font-size: 16px;
         line-height: 21px;
@@ -60,12 +63,18 @@
         &:focus  svg path  {
             stroke: #E3B838;
         }
+        @include mq(sm){
+            order: -1;
+                } 
     }
 }
 
 .copyright-wrapper {
     border-top: 1px solid #E0E1DD;
     margin-top: 60px;
+    @include mq(sm){
+    padding-block:10px;
+        } 
 }
 .copyright-section {
     display: flex;
@@ -73,5 +82,6 @@
     align-items: center;     
     @include mq(sm){
      flex-direction: column-reverse;
+     gap: 5px;
      } 
 }
